objects/Exchange_Item__c.object
<CustomObject>
    <fields>
        <fullName>Case_Line_Item__c</fullName>
        <label>Case Line Item</label>
        <referenceTo>Case_Line_Items__c</referenceTo>
        <relationshipLabel>Exchange Items</relationshipLabel>
        <relationshipName>Exchange_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Exchange_Amount__c</fullName>
        <inlineHelpText>Price of the exchange item.</inlineHelpText>
        <label>Exchange Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Exchange_Cost__c</fullName>
        <inlineHelpText>Cost of the exchange item to the customer.</inlineHelpText>
        <label>Exchange Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Exchange Items</relationshipLabel>
        <relationshipName>Exchange_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Exchange Item</label>
    <nameField>
        <displayFormat>EI-{000000}</displayFormat>
        <label>Exchange Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exchange Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>